--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^6.1.0
   cached_network_image: ^3.2.1
   faker: ^2.0.0
+  shared_preferences: ^2.2.2
   
 
 dev_dependencies:
