--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cached_network_image: ^3.2.1
   faker: ^2.0.0
   shared_preferences: ^2.2.2
+  flutter_splash_screen: ^3.0.0
   
 
 dev_dependencies:
